<resources>

    <string-array name="types">




       <item>all</item>
       <item>education</item>
        <item>social</item>
       <item>music</item>
        <item>charity</item>
        <item>cooking</item>
        <item>diy</item>
        <item>busywork</item>
        <item>recreational</item>
        <item>relaxation</item>



    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="todo1" translatable="false">TODO</string>
    <string name="todo2" translatable="false">TODO</string>
    <string name="todo3" translatable="false">TODO</string>
    <string name="todo4" translatable="false">TODO</string>
    <string name="participants" translatable="false">Participants</string>
    <string name="text1" >LightMode</string>
    <string name="price">Price</string>


    <array name="initial_slider_values">
            <item>1.0</item>
            <item>5.0</item>
        </array>



</resources>
