<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="250dp"

        android:layout_marginLeft="5dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/background">
        <TextView
            android:id="@+id/textViewCategory"
            style="@style/category1"


            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="140dp"
            android:text="Category"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />











        <TextView
            android:id="@+id/explore_the"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="70dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="80dp"
            android:text="Explore the nightlife of your city"

            android:lineSpacingExtra="4sp"
            android:gravity="center_horizontal|center_vertical"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />




        <com.like.LikeButton
            android:id="@+id/buttonHeartlist"
            app:icon_size="13dp"
            app:icon_type="heart"
            app:like_drawable="@drawable/heart_on"
            app:unlike_drawable="@drawable/heart_off"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            app:liked="false"
            app:dots_primary_color="@color/colorAccent"
            app:dots_secondary_color="@color/colorPrimary"
            app:circle_end_color="@color/colorAccent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />









        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="190dp"
            android:id="@+id/free"
            android:text="Free"
            android:textAllCaps="false"
            android:textSize="22dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView

            android:id="@+id/textPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="215dp"
            android:text="Price &#128176;"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"


            />



        <ImageView
            android:id="@+id/percon2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="135dp"
            android:layout_marginTop="188dp"
            android:background="@drawable/circle"
            android:scrollX="-5dp"
            android:src="@drawable/ic_group_black_24dp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/todo1" />


        <ImageView
            android:id="@+id/percon1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="188dp"

            android:background="@drawable/circle"
            android:scrollX="-5dp"
            android:scrollY="-5dp"
            android:src="@drawable/person"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/todo2" />

        <ImageView
            android:id="@+id/percon3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="188dp"

            android:background="@drawable/circle"
            android:src="@drawable/groupv"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/todo3" />


        <ImageView
            android:id="@+id/percon4"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="203dp"
            android:layout_marginTop="188dp"

            android:background="@drawable/circle"
            android:src="@drawable/groupvv"

            app:layout_constraintLeft_toLeftOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/todo4" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="106dp"
            android:layout_marginTop="220dp"
            android:text="@string/participants"
               android:id="@+id/Participants"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />


        <ProgressBar

            android:id="@+id/progress_bar"
            android:layout_width="90dp"
            android:layout_height="10dp"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"

            android:background="@drawable/pb_drawable_size"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="205dp"
            android:max="100"
            app:layout_constraintLeft_toLeftOf="parent"

            app:layout_constraintTop_toTopOf="parent"


            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="260dp"
            android:layout_marginTop="220dp"
            android:text="Accessibility"
                android:id="@+id/Accessibility"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>











</LinearLayout>